# gif-picker

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContextMenu.tsx  DiscordImportDialog.tsx  FolderPathLabel.tsx  MediaCard.tsx  MediaPreview.tsx  MediaThumbnail.tsx  SettingsPreviewPane.tsx  SettingsView.tsx  TagAssignDialog.tsx  VirtualGifGrid.tsx  WindowControls.tsx
src/components/ui/: ActionButton.tsx  Button.tsx  Checkbox.tsx  IconButton.tsx  InputDialog.tsx  OptionList.tsx  Select.tsx  Slider.tsx  Toast.tsx  Toggle.tsx
src/constants/: appLinks.ts
src/contexts/: PrivacyMaskContext.tsx
src/hooks/: useAppUpdater.ts  useKeyboardShortcuts.ts  useVirtualGrid.ts  useWindowFocused.ts
src/store/: useLibraryStore.ts
src/styles/: globals.css
src/utils/: clipboard.ts  discordGifs.ts  discordImportState.ts  duplicates.ts  extractFirstFrame.ts  fileActions.ts  mediaTypes.ts  openUrl.ts  paths.ts  theme.ts
