[package]
name = "gif-picker"
version = "0.2.0"
description = "Gif Picker — Local GIF library browser"
authors = ["0xNebi"]
license = "MIT"
repository = "https://github.com/0xNebi/gif-picker"
edition = "2021"

[lib]
name = "gif_picker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["gif", "webp", "png", "jpeg"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
tauri-plugin-process = "2"

# Single instance is nice for a picker app
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
